--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -1,10 +1,9 @@
 div {
     color: white;
     background-color: red;
-}
-
-p{
-    color: green;
+    font-size: 32px;
+    font-weight: bold;
+    text-align: center;
 }
 
 
