--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -5,23 +5,35 @@ body {
 
 .card {
   width: 400px;
+  height: 200px; 
   background: #fff;
   margin: 16px auto;
+  padding: 10px; 
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 10px;
+
 }
 
 .content {
   background: #e3f4ff;
+  padding: 10px; 
+  margin: 10px auto; 
+
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding: 10px; 
 }
+
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 5px; 
 }
