--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -1,4 +1,7 @@
 .container {
+  display: flex; 
+  justify-content: center;
+  align-items: center; 
   background: dodgerblue;
   border: 4px solid midnightblue;
   width: 400px;
@@ -9,7 +12,7 @@
   background: palevioletred;
   font-weight: bold;
   text-align: center;
-  border: 6px solid maroon;
+  border: 6px solid maroon;;
   width: 80px;
   height: 80px;
-}
+};
