--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  padding: 10px; 
+  display: flex; 
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center; 
 }
 
 .logo {
@@ -8,18 +13,25 @@
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  padding: 4px 30px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
-}
+  display: flex; 
+  gap: 8px; 
+} 
 
 a {
   font-size: 22px;
   background: white;
-  padding: 8px;
+  padding: 4px;
   /* this removes the line under the links */
   text-decoration: none;
-}
+
+
+ }
+
+
+
