--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
 
 .modal {
@@ -20,6 +21,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  flex-direction: row;
+  padding: 8px;
 }
 
 .icon {
@@ -32,8 +36,35 @@ body {
   border-radius: 50%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  flex-shrink: 0;
+  margin: 10px;
 }
+
+.r-content {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  gap: 10px; 
+}
+
+.top-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-weight: bold;
+  font-size: 20px;
+} 
+
+.text {
+  display: flex;
+}
+
+.action {
+  display: flex;
+  gap: 5px; 
+}
+
 
 .close-button {
   background: #eee;
